# iota-c-library

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md
Testing/Temporary/: CTestCostData.txt
src/: aux.c  main.c  main.h
src/iota/: addresses.c  addresses.h  bundle.c  bundle.h  common.c  common.h  conversion.c  conversion.h  iota_types.h  kerl.c  signing.c  signing.h  transfers.c  transfers.h
tests/: CMakeLists.txt  address_test.c  conversion_test.c  signing_test.c  test_mocks.c  test_vectors.h
